# rtmath

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.txt  README.md  Ryan-DebugConfig.cmake.in  Ryan-DebugConfigVersion.cmake.in  Ryan.Debug.DebugAssembly.manifest.Publisher.template  Ryan.Debug.DebugAssembly.manifest.single.template  Ryan.Debug.DebugAssembly.manifest.template  Ryan.Ryan_Debug.Release.manifest.Publisher.template  Ryan_Debug.template.wxs  Ryan_Debug.xml  cmake-settings.h.in  config.template.wxs  debug_subversion.h.template  deploy.bat  libgeneration.txt  license.rtf  manifestref.h.in  packaging-planning.txt  prebuild.bat  prebuild.csh  ryan-debug.spec.in  sxs.template.wxs  upgrade.bat
apps/Debug-test/: CMakeLists.txt  test.cpp  test.rc.in
apps/logger/: CMakeLists.txt  logger.rc.in  main.cpp
apps/module/: CMakeLists.txt  main.cpp  module.rc.in
plugins/test/: CMakeLists.txt  plugin-test.cpp
rtmath/: CMakeLists.txt  CTestConfig.cmake  FindOpenMP.cmake  FindROOT.cmake  IncludeFileDependencies.dgml  Makefile  README  auxiliary.txt  console-laptop.txt  console-solar.txt  filepaths.txt  mls.txt  profiles.xlsx  rtmath research 6-2-2011.pptx  rtmath research 7-2011.pptx  rtmath-da2.sln  rtmath.sln  trpaux.txt
rtmath/CMakeRules/: AddPackageDependency.cmake  FindBonjour.cmake  FindHDF5.cmake  FindICE.cmake  FindNetCDF.cmake  FindOpenMP.cmake  FindProtobuf.cmake  FindQhull.cmake  FindROOT.cmake  FindVoro.cmake  PrecompiledHeader.cmake  SVNinfo.cmake  addAssembly.cmake  addBaseProject.cmake  addBoostUniform.cmake  addInstallDirs.cmake  addModuleFiles.cmake  addapp.cmake  addconfiginfo.cmake  adddocs.cmake  addlib.cmake  common.cmake  commonRtmathApps.cmake  generateAssemblyGuid.cmake  signing.cmake
rtmath/config/: filepaths.conf  rtmath.conf
rtmath/glgraph/: glgraph.cpp  glgraph.h  glgraph.vcxproj  glgraph.vcxproj.filters  glgraphplugin.h
rtmath/glgraph-win/: AssemblyInfo.cpp  BitmapFont.cpp  OutlineFont.cpp  Plottable.cpp  Plottable.h  Rectangle.cpp  Rectangle.h  camera.cpp  camera.h  fontlabel.cpp  fontlabel.h  glform.cpp  glform.h  glgraph-win.vcxproj  glgraph-win.vcxproj.filters  glgraph-winControl.cpp  glgraph-winControl.h  histiogram.cpp  histiogram.h  linePlot.cpp  linePlot.h  markerSquare.cpp  markerSquare.h  pointfconverter.h  stdafx.cpp  stringConverter.cpp
rtmath/graphing/glgraph-win/: BitmapFont.h  OutlineFont.h  Plottable.cpp  ReadMe.txt  Rectangle.cpp  camera.h  (+8 more)
rtmath/mie/: AnCalc.cpp  AnCalc.h  Makefile  Qcalc.cpp  Qcalc.h  Scalc.cpp  Scalc.h  abNCalc.cpp  abNCalc.h  mie.cpp  mie.h  mie.vcxproj  mie.vcxproj.filters  miePhaseFunc.cpp  miePhaseFunc.h  piNCalc.cpp  piNCalc.h  tauNCalc.cpp  tauNCalc.h  wnCalc.cpp
rtmath/mie-qt-ui/: frmJobItemProps.ui  frmmain.cpp  frmmain.h  frmmain.ui  job.cpp  job.h  main.cpp  mie-qt-ui.vcxproj  mie-qt-ui.vcxproj.filters  resource.h  task.cpp  task.h  taskNothing.cpp  taskNothing.h  taskOutput.h
rtmath/netcdf-managed/: ncattr.cpp  ncattr.h  ncdim.cpp  ncdim.h  ncfile.cpp  ncfile.h  ncgroup.cpp  ncgroup.h  nctype.cpp  nctype.h  ncvar.cpp  ncvar.h  netcdf-managed.h  netcdf-managed.vcxproj  netcdf-managed.vcxproj.filters
rtmath/plugins/: CMakeLists.txt
rtmath/profiles/: test.txt  trph2o.txt
rtmath/rayleigh/: Makefile  Qcalc-Rayleigh.cpp  Qcalc-Rayleigh.h  Qcalc.cpp  Scalc-Rayleigh.cpp  Scalc.cpp  Scalc.h  rayleigh.h  rayleigh.vcxproj  rayleigh.vcxproj.filters  rayleighPhaseFunc.cpp  rayleighPhaseFunc.h
rtmath/rtmath/: .cproject  .project  AssemblyInfo.cpp  CMakeLists.txt  Makefile  MurmurHash3.cpp  Qcalc-Rayleigh.cpp  ReadMe.txt  Readme.txt  Stdafx.cpp  Stdafx.h  app.rc  atmos.cpp  atmos.h  cdf-ddscat.h  command.cpp  config.cpp  config.h  daDiagonalMatrix.cpp  daDiagonalMatrix.h  daInitLayer.cpp  daInitLayer.h  daLayer.cpp  daLayer.h  daPf.cpp  daPf.h  damatrix.cpp  damatrix.h  damatrix_override.h  damatrix_quad.cpp  damatrix_quad.h  ddscat.cpp  ddscat.h  ddscat2.cpp  ddscat2.h  debug.cpp  debug.h  debug_mem.cpp  debug_mem.h  debug_mem_class.h  (+48 more)
rtmath/rtmath-apps/: .cproject  .project  CMakeLists.txt  Makefile  Makefile.old  combo.cpp  ddparse.cpp  options.h
rtmath/rtmath-base/: Makefile  damatrix.cpp  damatrix.h  enums.h  macros.h  matrixop.cpp  matrixop.h  phaseFunc.cpp  phaseFunc.h  polynomial.cpp  polynomial.h  quadrature.cpp  quadrature.h  rtmath-base.h  rtmath-base.vcxproj  rtmath-base.vcxproj.filters  zeros.cpp  zeros.h
rtmath/rtmath-console-test/: .cproject  .project  dalayers.txt  ddscat-test.cpp  gmon.out  oldmain.txt  rtmath-console-test.cpp  rtmath-console-test.vcxproj  rtmath-console-test.vcxproj.filters  test.cpp
rtmath/rtmath-qt-ui/: frmabout.cpp  frmlayerprops.cpp  frmlayerprops.h  frmmain.cpp  frmmain.ui  frmmodelprops.h  frmmodelprops.ui  main.cpp  res.qrc  rtmath-qt-ui.vcxproj  rtmath-qt-ui.vcxproj.filters
rtmath/rtmath-server/: rtmath-server.c  rtmath-server.vcxproj  rtmath-server.vcxproj.filters
rtmath/rtmath-test/: rtmath-test.vcxproj  rtmath-test.vcxproj.filters
rtmath/rtmath-units/: rtmath-units.vcxproj
rtmath/rtmath-win-ui/: AssemblyInfo.cpp  ReadMe.txt  app.rc  frmLayers.cpp  frmLayers.h  frmMain.cpp  frmMain.h  frmMain.resx  resource.h  rtBaseAtmos.cpp  rtBaseAtmos.h  rtModel.cpp  rtModel.h  rtRun.cpp  rtRun.h  rtmath-win-ui.cpp  rtmath-win-ui.vcxproj  rtmath-win-ui.vcxproj.filters  stdafx.cpp
rtmath/win-bonjour/: win-bonjour.h  win-bonjour.vcxproj  win-bonjour.vcxproj.filters
ryan-debug/: CMakeLists.txt  Doxyfile.in  Ryan-DebugConfig.cmake.in  Ryan-DebugConfigVersion.cmake.in  Ryan.Debug.DebugAssembly.app.manifest.template  Ryan.Debug.DebugAssembly.manifest.template  Ryan_Debug.template.wxs  cmake-settings.h.in  collectdirs.bat  debug.h  license.rtf  prebuild.bat
ryan-debug/Ryan_Debug/: Serialization.h  debug.h  defs.h  fs.h  hash.h  info.h  plugin.h  registry.h  splitSet.h
ryan-debug/apps/: CMakeLists.txt
ryan-debug/environment/: ryan-debug
ryan-debug/plugins/: CMakeLists.txt
ryan-debug/src/: config.cpp  debug.cpp  error.cpp  hash.cpp  info.cpp  io.cpp  lib.rc.in  logging.cpp  macros.cpp  modules.cpp  os_functions.cpp  resource.h  serialization.cpp
(+1617 files in other folders)
